[package]
name = "mbp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mbp2"
path = "index.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_derive = "1.0.183"
lazy_static = "1.4.0"
ulid = { version = "1.0.0", features = ["serde"] }
common_macros = "0.1.1"

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper"
branch = "master"
version = "^0.16.0-dev"
features = ["expose-test-schema", "bson"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
version = "^0.5.0-rc.2"
features = [ "tls" ]

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
version = "^0.1.0-rc.2"
features = [ "handlebars" ]

[workspace]
members = [
   "web",
   "bin/app",
   "bin/appdb",
]
