[package]
name = "mbp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mbp2"
path = "index.rs"

[dependencies]
common_macros = "0.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_derive = "1.0.183"
tokio-util = { version = "*", default-features = false, features = ["compat"] }
ulid = { version = "1.0.0", features = ["serde"] }

[dependencies.async-graphql]
git = "https://github.com/async-graphql/async-graphql"
branch = "master"
version = "^6.0"
features = [
   "apollo_tracing", "apollo_persisted_queries",
   "bson", "dynamic-schema", "graphiql", "log",
   "playground", "opentelemetry", "tracing"
]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
version = "^0.5.0-rc.2"
features = [ "tls" ]

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
version = "^0.1.0-rc.2"
features = [ "handlebars" ]

[workspace]
members = [
   "web",
   "bin/app",
   "bin/appdb",
]
