[package]
name = "mbp2-frontend"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "mbp2_frontend"
path = "index.rs"

[dependencies]
yew-router = "0.17.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
log = "0.4.14"
pulldown-cmark = { version = "0.9.1", default-features = false }
reqwasm = "0.4.0"
serde = { version = "1.0.133", features = ["derive"] }
gloo = { version = "0.8.0", features = ["futures"] }

[dependencies.ybc]
git = "https://github.com/SionoiS/ybc"
branch = "alpha-v0.4"
version = "0.4.0-alpha.0"

[dependencies.yew]
version = "0.20.0"
features = ["csr"]

[dependencies.web-sys]
version = "0.3.56"
features = [
   "DataTransfer",
   "DragEvent",
   "File",
   "Headers",
   "Request",
   "RequestInit",
   "RequestMode",
   "Response",
   "Window",
]
